--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "analyze": "echo \"Analizando bundle...\" && vite build --mode analyze",
+    "clean": "echo \"Limpiando archivos de build...\" && rm -rf dist"
   },
   "keywords": [],
   "author": "",
